# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] fix/change
# ====================================================================


# 2016-12-13
# --------------------------------------------------------------------
# ~ switching to 22-pushpa-calib.py to get calib and reso functions in
# ~ cut a v2.1 release now that internal background activity scaling
#   is working as expected
# ~ looks like scaling is working for internal K40 at least
# + added scaleBkgs() to funcs2.py to scale into real mBq/kg units
# + added key data[key]['runtime'] to dataDRU2()
# ~ use backgrounds2.txt for v21
# ~ don't use bkgs scaling in readROOT2() for v21
# ~ oops, run 1544 has 2 hour subruns - changed in dataDRU2()
# ~ switch to 21-get-activity-values.py as main/master script
# ~ program now skips the fitting bit if no signals [S] are specified
# ~ program works if there are no backgrounds [B] specified
# ~ add 'reuse' tag to the saved plot names
# ~ dru1 and dru2 with "reuse" now return the exact same results!
# ~ AH! dru1 fitting fails if the fixed K40 scaling is too high
# + new data in join2-1544-master.root


# 2016-12-12
# --------------------------------------------------------------------
# ~ fixed a bug if not using dru1 or dru2 in v20
# + in v14, in func.py I needed to do init mc[loc][iso]['act'] = []
#   and then do mc[loc][iso]["act"].append(-1) for fixed activities


# 2016-12-09
# --------------------------------------------------------------------
# + cut a v2.0 release now that the fit rebinning is fixed
# ~ fixed the rebinscale to work with new v20 format but I still
#   don't understand why it effects the fit results so much
# + applied rebin bug fix to v14 and v20
# ~ FINALLY fixed the fit rebinning issue! I was selecting the wrong
#   subset of bins in the HiE filling section. It needs to look like: